tests/snapshots/r#mod__discard_branch.snap
---
source: tests/mod.rs
expression: ctx.redact_buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 60, height: 10 },
    content: [
        " Branches                                                   ",
        "🢒main    origin/main                                        ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "────────────────────────────────────────────────────────────",
        "$ git branch -d main                                        ",
        "error: cannot delete branch 'main' used by worktree at '/tmp",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 0, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 1, fg: Green, bg: Reset, underline: Reset, modifier: BOLD,
        x: 5, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 9, y: 1, fg: Red, bg: Reset, underline: Reset, modifier: BOLD,
        x: 20, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 8, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
