tests/snapshots/r#mod__discard_branch_confirm.snap
---
source: tests/mod.rs
expression: ctx.redact_buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 60, height: 10 },
    content: [
        " Branches                                                   ",
        "🢒main origin/main add initial-file                          ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "────────────────────────────────────────────────────────────",
        "Discard                                  main origin/main ad",
        "n Quit                                   y Discard          ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 0, fg: Rgb(216, 166, 87), bg: Reset, underline: Reset, modifier: BOLD,
        x: 9, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Rgb(80, 73, 69), underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Rgb(169, 182, 101), bg: Rgb(80, 73, 69), underline: Reset, modifier: NONE,
        x: 5, y: 1, fg: Reset, bg: Rgb(80, 73, 69), underline: Reset, modifier: NONE,
        x: 6, y: 1, fg: Rgb(234, 105, 98), bg: Rgb(80, 73, 69), underline: Reset, modifier: NONE,
        x: 17, y: 1, fg: Reset, bg: Rgb(80, 73, 69), underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 7, fg: Rgb(80, 73, 69), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 8, fg: Rgb(125, 174, 163), bg: Reset, underline: Reset, modifier: BOLD,
        x: 19, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 8, fg: Rgb(169, 182, 101), bg: Reset, underline: Reset, modifier: NONE,
        x: 45, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 46, y: 8, fg: Rgb(234, 105, 98), bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: Rgb(211, 134, 155), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 9, fg: Rgb(211, 134, 155), bg: Reset, underline: Reset, modifier: NONE,
        x: 42, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
