tests/snapshots/r#mod__help_menu.snap
---
source: tests/mod.rs
expression: ctx.redact_buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 20 },
    content: [
        "🢒No branch                                                                      ",
        "                                                                                ",
        " Recent commits                                                                 ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "────────────────────────────────────────────────────────────────────────────────",
        "Help                      Submenu                                               ",
        "g Refresh                 h Help                                                ",
        "tab ToggleSection         b Branch                                              ",
        "k p ↑ SelectPrevious      c Commit                                              ",
        "j n ↓ SelectNext          f Fetch                                               ",
        "C-u HalfPageUp            l Log                                                 ",
        "C-d HalfPageDown          F Pull                                                ",
        "y ShowRefs                P Push                                                ",
        "                          r Rebase                                              ",
        "                          X Reset                                               ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 0, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 10, fg: Blue, bg: Reset, underline: Reset, modifier: BOLD,
        x: 25, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 10, fg: Blue, bg: Reset, underline: Reset, modifier: BOLD,
        x: 38, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 11, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 11, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 12, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 12, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 13, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 13, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 14, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 14, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 15, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 15, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 16, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 16, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 17, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 17, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 18, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 19, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
